Fixing up apache configs and removing old CoreOS deploy stuff. Further work on FCM-9 and FCM-17.

--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -32,14 +32,16 @@ ModPagespeedDomain deliver.fcm-static.org
 ModPagespeedDomain *.deliver.fcm-static.org
 
 # - shards & rewrites
-ModPagespeedMapRewriteDomain //deliver.fcm-static.org http://fatcatmap.org
-ModPagespeedMapRewriteDomain //deliver.fcm-static.org https://fatcatmap.org
+#ModPagespeedMapRewriteDomain //deliver.fcm-static.org http://fatcatmap.org
+#ModPagespeedMapRewriteDomain //deliver.fcm-static.org https://fatcatmap.org
 ModPagespeedShardDomain http://deliver.fcm-static.org https://deliver.fcm-static.org
 
 # - origins
-ModPagespeedMapOriginDomain http://deliver.fcm-static.org https://deliver.fcm-static.org
-ModPagespeedLoadFromFile http://fatcatmap.org/assets /base/build/fatcatmap/fatcatmap/assets
-ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/build/fatcatmap/fatcatmap/assets
+#ModPagespeedMapOriginDomain http://deliver.fcm-static.org https://deliver.fcm-static.org
+ModPagespeedLoadFromFile http://fatcatmap.org/assets /base/apps/fatcatmap/fatcatmap/assets
+ModPagespeedLoadFromFile https://fatcatmap.org/assets /base/apps/fatcatmap/fatcatmap/assets
+ModPagespeedLoadFromFile http://deliver.fcm-static.org/assets /base/apps/fatcatmap/fatcatmap/assets
+ModPagespeedLoadFromFile https://deliver.fcm-static.org/assets /base/apps/fatcatmap/fatcatmap/assets
 
 # - disabled filters
 ModPagespeedDisableFilters add_instrumentation,prioritize_critical_css,local_storage_cache
