--- a/conf/appserver/app.conf
+++ b/conf/appserver/app.conf
@@ -2,12 +2,12 @@
 # Server Settings
 ServerName fatcatmap.org
 ServerAdmin hostmaster@fatcatmap.org
-DocumentRoot "/base/software/htdocs"
+DocumentRoot "/base/htdocs"
 
 # Pagespeed Conf & Paths
-Include /base/build/fatcatmap/conf/appserver/paths.conf
-Include /base/build/fatcatmap/conf/appserver/headers.conf
-Include /base/build/fatcatmap/conf/appserver/pagespeed.conf
+Include /base/apps/fatcatmap/conf/appserver/paths.conf
+Include /base/apps/fatcatmap/conf/appserver/headers.conf
+Include /base/apps/fatcatmap/conf/appserver/pagespeed.conf
 
 # HTTP Proxy
 ProxyPass /assets/ !
