--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,3 @@
 [pep8]
-ignore = E111,E121,E701,E401,E702,E221,E124,E303,E128
+ignore = E111,E121,E701,E401,E702,E221,E124,E303,E128,E122,E272
 max-line-length = 120
