Updates to apache2 configs.

--- a/conf/appserver/headers.conf
+++ b/conf/appserver/headers.conf
@@ -2,7 +2,5 @@
 # ~~ Top-level Headers ~~ #
 
 # HSTS long TTL = 31536000
-Header set Strict-Transport-Security "max-age=3600; includeSubDomains"
+Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
 Header set X-Content-Type-Options "nosniff"
-Header unset X-Mod-Pagespeed
-Header unset X-Mod-Spdy
