--- a/conf/appserver/pagespeed.conf
+++ b/conf/appserver/pagespeed.conf
@@ -6,21 +6,22 @@ ModPagespeedFetchFromModSpdy on
 ModPagespeedAddOptionsToUrls Off
 ModPagespeedLowercaseHtmlNames On
 ModPagespeedCombineAcrossPaths On
-ModPagespeedXHeaderValue "X135.75"
 ModPagespeedBeaconUrl "/_k9/beacon"
-ModPagespeedRewriteLevel PassThrough
+ModPagespeedRewriteLevel CoreFilters
 ModPagespeedModifyCachingHeaders On
 ModPagespeedImplicitCacheTtlMs 30000
 ModPagespeedAnalyticsID UA-25133943-11
-ModPagespeedCriticalImagesBeaconEnabled Off
-ModPagespeedInPlaceResourceOptimization Off
-ModPagespeedDisableRewriteOnNoTransform Off
+ModPagespeedCriticalImagesBeaconEnabled On
+ModPagespeedInPlaceResourceOptimization On
+ModPagespeedDisableRewriteOnNoTransform On
 ModPagespeedCustomFetchHeader XAF-Origin pagespeed
 ModPagespeedInlineResourcesWithoutExplicitAuthorization Script,Stylesheet
 ModPagespeedFetchHttps enable,allow_unknown_certificate_authority,allow_self_signed
 
 # - paths
 ModPagespeedAllow "*"
+ModPagespeedAllow "dev/*"
+ModPagespeedAllow "/dev/*"
 ModPagespeedAllow "assets/*"
 ModPagespeedAllow "/assets/*"
 ModPagespeedAllow "/js-proxy/*"
@@ -38,7 +39,6 @@ ModPagespeedDomain *.deliver.fcm-static.org
 #ModPagespeedMapRewriteDomain //deliver.fcm-static.org http://fatcatmap.org
 #ModPagespeedMapRewriteDomain //deliver.fcm-static.org https://fatcatmap.org
 ModPagespeedShardDomain http://deliver.fcm-static.org https://deliver.fcm-static.org
-ModPagespeedMapProxyDomain http://storage.googleapis.com/fcm-dev https://deliver.fcm-static.org/dev
 
 # - origins
 ModPagespeedMapOriginDomain http://storage.googleapis.com https://storage.googleapis.com
@@ -58,7 +58,7 @@ ModPagespeedEnableFilters extend_cache_pdfs,elide_attributes
 ModPagespeedEnableFilters collapse_whitespace,remove_comments
 ModPagespeedEnableFilters convert_meta_tags,remove_quotes,trim_urls
 ModPagespeedEnableFilters insert_dns_prefetch
-ModPagespeedEnableFilters add_instrumentation,prioritize_critical_css,local_storage_cache
+ModPagespeedEnableFilters add_instrumentation,local_storage_cache
 ModPagespeedEnableFilters in_place_optimize_for_browser
 
 # - head-related filters
