--- a/conf/appserver/paths.conf
+++ b/conf/appserver/paths.conf
@@ -65,3 +65,10 @@ Alias /image-proxy/providence-clarity/warehouse/ /base/data/warehouse/
   Allow from 127.0.0.1
   Allow from ::1
 </Location>
+
+<Location /dev/>
+  Allow from all
+  Order allow,deny
+  Allow from 127.0.0.1
+  Allow from ::1
+</Location>
