Adding env passing from instance bootstrap.

--- a/conf/appserver/app.conf
+++ b/conf/appserver/app.conf
@@ -9,6 +9,13 @@ Include /base/apps/fatcatmap/conf/appserver/paths.conf
 Include /base/apps/fatcatmap/conf/appserver/headers.conf
 Include /base/apps/fatcatmap/conf/appserver/pagespeed.conf
 
+# Environment
+PassEnv K9_ENVIRONMENT
+PassEnv K9_GROUP
+PassEnv K9_INSTANCE_ID
+PassEnv K9_INSTANCE_ZONE
+PassEnv K9_INSTANCE_HOSTNAME
+
 # HTTP Proxy
 ProxyPass /assets/ !
 ProxyPass /static/ !
@@ -20,4 +27,3 @@ ProxyPreserveHost On
 Header set Public-Key-Pins 'max-age=31536000; pin-sha256="47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="; pin-sha256="O1Zycm5XaVo1C5PY+9LZ1JOPhPoWhlsCfZ1iQsU2QkY="; includeSubDomains'
 
 # PKP long TTL: 31536000
-
