--- a/app.yaml
+++ b/app.yaml
@@ -82,6 +82,7 @@ handlers:
 
 - url: /assets/js
   static_dir: fatcatmap/assets/js
+  application_readable: true
 
 - url: /assets/ext
   static_dir: fatcatmap/assets/ext
