--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "wrench": "~1.5.4",
     "webp-bin": "~0.1.4",
     "less-stream": "~0.1.1",
+    "sass-stream": "~0.1.7",
     "closure-compiler-stream": "~0.1.2",
     "karma": "~0.10.x",
     "karma-coverage": "~0.1",
