Official switchover to msgpack with hashkey_blob storage and support for snappy :)

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ fabtools
 fabric
 dogapi
 msgpack-python
-ctypes-snappy
+python-snappy
 raven
 fakeredis
 git+https://github.com/sgammon/libcloud.git#egg=libcloud
