--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "btoa": "~1.1.1",
     "wrench": "~1.5.4",
     "webp-bin": "~0.1.4",
-    "less-stream": "~0.1.3",
     "sass-stream": "~0.1.7",
     "closure-compiler-stream": "~0.1.10",
     "karma": "~0.10.x",
     "karma-coverage": "~0.1",
     "karma-jasmine": "~0.1.5",
     "karma-junit-reporter": "~0.1",
+    "karma-mocha-reporter": "~0.3.1",
     "karma-phantomjs-launcher": "~0.1",
     "gulp": "~3.8.5",
+    "gulp-tap": "~0.1.1",
     "gulp-svgmin": "~0.4.6",
     "gulp-rimraf": "~0.1.0",
     "gulp-concat": "~2.3.4",
