--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     }
   ],
   "devDependencies": {
+    "del": "~0.1.3",
     "btoa": "~1.1.1",
     "wrench": "~1.5.4",
     "webp-bin": "~0.1.4",
@@ -33,8 +34,6 @@
     "gulp": "~3.8.5",
     "gulp-tap": "~0.1.1",
     "gulp-svgmin": "~0.4.6",
-    "gulp-rimraf": "~0.1.0",
-    "gulp-concat": "~2.3.4",
     "gulp-imagemin": "~0.6.1",
     "gulp-sourcemaps": "~0.4.4"
   }
