Further template structure refactoring and cleanup. Working frontend template injection. Added slimmer to requirements and fixed google-api-python-client issue.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ nose
 uwsgi
 fabtools
 fabric
-google-api-python-client
 msgpack-python
 python-snappy
 raven
@@ -16,3 +15,5 @@ hiredis
 elasticsearch
 thrift
 pyyaml
+slimmer
+google-api-python-client
