Route refactor, new URL scheme, native bridge.
 - Add new routing functionality: shortnames w/includes, optional path parts.
 - Switch to new URL scheme based on entity kinds & ids, e.g. '/person/123'.
 - Add cross-window messaging bridge for receiving native WebView events.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/sgammon/libcloud.git#egg=libcloud-0.15.1
 redis
 nose
 uwsgi
@@ -9,7 +10,6 @@ raven
 fakeredis
 eventlet
 gevent
-git+https://github.com/sgammon/libcloud.git#egg=libcloud
 dogapi
 hiredis
 elasticsearch
